--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGsvpu6ThssgC1GcvRF893",
+      "authorship_tag": "ABX9TyPWEAW9OUgd64EGyi1idVJt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# Create Final_output Folder, Install Dependencies, and Mount Google Drive"
+      ],
       "metadata": {
         "id": "cDekvCObykj8"
       }
@@ -40,7 +42,43 @@
         "id": "1fwYEXVvv7FS"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import subprocess\n",
+        "import os\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# Create Final_output directory and subdirectories\n",
+        "try:\n",
+        "    OUTPUT_DIR = \"/content/drive/MyDrive/Final_output\"\n",
+        "    os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+        "    os.makedirs(os.path.join(OUTPUT_DIR, \"visualizations\"), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(OUTPUT_DIR, \"models\"), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(OUTPUT_DIR, \"logs\"), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(OUTPUT_DIR, \"transcripts\"), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(OUTPUT_DIR, \"features\"), exist_ok=True)\n",
+        "    print(f\"Created output directories at {OUTPUT_DIR}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error creating directories: {str(e)}\")\n",
+        "\n",
+        "# Install required packages\n",
+        "try:\n",
+        "    packages = [\n",
+        "        \"librosa\", \"soundfile\", \"opensmile\", \"speechbrain\",\n",
+        "        \"transformers\", \"torch\", \"openai-whisper\",\n",
+        "        \"pandas\", \"numpy\", \"matplotlib\", \"seaborn\", \"torch-geometric\"\n",
+        "    ]\n",
+        "    for pkg in packages:\n",
+        "        subprocess.check_call([\"pip\", \"install\", pkg])\n",
+        "    print(\"All required packages installed successfully\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error installing packages: {str(e)}\")\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "try:\n",
+        "    drive.mount('/content/drive')\n",
+        "except Exception as e:\n",
+        "    print(f\"Error mounting Google Drive: {str(e)}\")"
+      ]
     }
   ]
 }
