--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWEAW9OUgd64EGyi1idVJt",
+      "authorship_tag": "ABX9TyMfb5HJMVPeCRBxq6ohIZqb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,60 @@
         "except Exception as e:\n",
         "    print(f\"Error mounting Google Drive: {str(e)}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Import Libraries and Define Error Logging"
+      ],
+      "metadata": {
+        "id": "vhBfVvJF1LPV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "import soundfile as sf\n",
+        "from pathlib import Path\n",
+        "import pickle\n",
+        "import json\n",
+        "from typing import Dict, List, Tuple, Any\n",
+        "import warnings\n",
+        "import opensmile\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "import torch_geometric\n",
+        "from torch_geometric.nn import GCNConv, GATConv, global_mean_pool\n",
+        "from torch_geometric.data import Data, Batch\n",
+        "from transformers import Wav2Vec2Processor, Wav2Vec2Model, BertTokenizer, BertModel\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, roc_auc_score, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import networkx as nx\n",
+        "import whisper\n",
+        "from multiprocessing import Pool\n",
+        "import time\n",
+        "\n",
+        "# Error logging function\n",
+        "def log_error(message: str):\n",
+        "    log_file = os.path.join(\"/content/drive/MyDrive/Final_output\", \"logs\", \"pipeline_errors.log\")\n",
+        "    with open(log_file, 'a') as f:\n",
+        "        f.write(f\"{time.strftime('%Y-%m-%d %H:%M:%S')} - {message}\\n\")\n",
+        "    print(f\"Error logged: {message}\")"
+      ],
+      "metadata": {
+        "id": "HgQHjFBr1HkT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
