added Cell 4: Model Definitions

--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnjSKWo12pJN1qG+OMQPkM",
+      "authorship_tag": "ABX9TyOKQSUz5kZQ0FFvn9n/TcSc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -466,6 +466,178 @@
       ],
       "metadata": {
         "id": "Dzls6vu11eFX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Definitions"
+      ],
+      "metadata": {
+        "id": "frgOMT9T11bF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class GraphAttentionModule(nn.Module):\n",
+        "    def __init__(self, input_dim=768, hidden_dim=256, num_heads=8, num_layers=3):\n",
+        "        super().__init__()\n",
+        "        self.gat_layers = nn.ModuleList([\n",
+        "            GATConv(input_dim if i == 0 else hidden_dim, hidden_dim, heads=num_heads, dropout=0.2)\n",
+        "            for i in range(num_layers)\n",
+        "        ])\n",
+        "        self.projection = nn.Linear(hidden_dim, hidden_dim)\n",
+        "        self.dropout = nn.Dropout(0.2)\n",
+        "\n",
+        "    def forward(self, x, edge_index, batch=None):\n",
+        "        for gat_layer in self.gat_layers:\n",
+        "            x = gat_layer(x, edge_index)\n",
+        "            x = F.relu(x)\n",
+        "            x = self.dropout(x)\n",
+        "        if batch is not None:\n",
+        "            x = global_mean_pool(x, batch)\n",
+        "        else:\n",
+        "            x = torch.mean(x, dim=0, keepdim=True)\n",
+        "        return self.projection(x)\n",
+        "\n",
+        "class VisionTransformerModule(nn.Module):\n",
+        "    def __init__(self, input_dim=80, patch_size=8, embed_dim=768, num_heads=12, num_layers=6):\n",
+        "        super().__init__()\n",
+        "        self.patch_embed = nn.Conv2d(1, embed_dim, kernel_size=patch_size, stride=patch_size)\n",
+        "        self.pos_embed = nn.Parameter(torch.randn(1, 1000, embed_dim))\n",
+        "        encoder_layer = nn.TransformerEncoderLayer(d_model=embed_dim, nhead=num_heads, dim_feedforward=embed_dim*4, dropout=0.1, activation='gelu')\n",
+        "        self.transformer = nn.TransformerEncoder(encoder_layer, num_layers=num_layers)\n",
+        "        self.classifier = nn.Linear(embed_dim, 256)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        B, C, H, W = x.shape\n",
+        "        x = self.patch_embed(x).flatten(2).transpose(1, 2)\n",
+        "        num_patches = x.shape[1]\n",
+        "        x = x + self.pos_embed[:, :num_patches, :]\n",
+        "        x = x.transpose(0, 1)\n",
+        "        x = self.transformer(x)\n",
+        "        x = x.transpose(0, 1)\n",
+        "        x = torch.mean(x, dim=1)\n",
+        "        return self.classifier(x)\n",
+        "\n",
+        "class UNetModule(nn.Module):\n",
+        "    def __init__(self, in_channels=1, out_channels=128):\n",
+        "        super().__init__()\n",
+        "        self.enc1 = self.conv_block(in_channels, 64)\n",
+        "        self.enc2 = self.conv_block(64, 128)\n",
+        "        self.enc3 = self.conv_block(128, 256)\n",
+        "        self.enc4 = self.conv_block(256, 512)\n",
+        "        self.bottleneck = self.conv_block(512, 1024)\n",
+        "        self.dec4 = self.upconv_block(1024, 512)\n",
+        "        self.dec3 = self.upconv_block(512, 256)\n",
+        "        self.dec2 = self.upconv_block(256, 128)\n",
+        "        self.dec1 = self.upconv_block(128, 64)\n",
+        "        self.final = nn.Conv1d(64, out_channels, kernel_size=1)\n",
+        "        self.pool = nn.AdaptiveAvgPool1d(1)\n",
+        "\n",
+        "    def conv_block(self, in_ch, out_ch):\n",
+        "        return nn.Sequential(\n",
+        "            nn.Conv1d(in_ch, out_ch, kernel_size=3, padding=1),\n",
+        "            nn.BatchNorm1d(out_ch),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv1d(out_ch, out_ch, kernel_size=3, padding=1),\n",
+        "            nn.BatchNorm1d(out_ch),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "    def upconv_block(self, in_ch, out_ch):\n",
+        "        return nn.Sequential(\n",
+        "            nn.ConvTranspose1d(in_ch, out_ch, kernel_size=2, stride=2),\n",
+        "            nn.BatchNorm1d(out_ch),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        e1 = self.enc1(x)\n",
+        "        e2 = self.enc2(F.max_pool1d(e1, 2))\n",
+        "        e3 = self.enc3(F.max_pool1d(e2, 2))\n",
+        "        e4 = self.enc4(F.max_pool1d(e3, 2))\n",
+        "        b = self.bottleneck(F.max_pool1d(e4, 2))\n",
+        "        d4 = self.dec4(b)\n",
+        "        d3 = self.dec3(d4)\n",
+        "        d2 = self.dec2(d3)\n",
+        "        d1 = self.dec1(d2)\n",
+        "        out = self.final(d1)\n",
+        "        out = self.pool(out).squeeze(-1)\n",
+        "        return out\n",
+        "\n",
+        "class AlexNetModule(nn.Module):\n",
+        "    def __init__(self, input_dim=768, num_classes=256):\n",
+        "        super().__init__()\n",
+        "        self.features = nn.Sequential(\n",
+        "            nn.Linear(input_dim, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(4096, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(4096, 2048),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.5),\n",
+        "        )\n",
+        "        self.classifier = nn.Linear(2048, num_classes)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.features(x)\n",
+        "        x = self.classifier(x)\n",
+        "        return x\n",
+        "\n",
+        "class MultiModalADReSSoModel(nn.Module):\n",
+        "    def __init__(self, audio_feature_dim=768, text_feature_dim=768, spectrogram_height=80, num_classes=2):\n",
+        "        super().__init__()\n",
+        "        self.graph_attention = GraphAttentionModule(input_dim=text_feature_dim)\n",
+        "        self.vision_transformer = VisionTransformerModule(input_dim=spectrogram_height)\n",
+        "        self.unet = UNetModule()\n",
+        "        self.alexnet = AlexNetModule(input_dim=audio_feature_dim)\n",
+        "        self.bert = BertModel.from_pretrained('bert-base-uncased')\n",
+        "        self.fusion_layer = nn.Sequential(\n",
+        "            nn.Linear(256 + 256 + 128 + 256, 512),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.3),\n",
+        "            nn.Linear(512, 256),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.3)\n",
+        "        )\n",
+        "        self.classifier = nn.Linear(256, num_classes)\n",
+        "\n",
+        "    def create_semantic_graph(self, text_features, audio_features):\n",
+        "        batch_size = text_features.shape[0]\n",
+        "        graphs = []\n",
+        "        device = text_features.device\n",
+        "        for i in range(batch_size):\n",
+        "            text_feat = text_features[i].unsqueeze(0)\n",
+        "            audio_feat = audio_features[i].unsqueeze(0)\n",
+        "            node_features = torch.cat([text_feat, audio_feat], dim=0)\n",
+        "            similarity = F.cosine_similarity(text_feat, audio_feat, dim=1)\n",
+        "            edge_index = torch.tensor([[0, 1], [1, 0]], dtype=torch.long, device=device).t() if similarity.item() > 0.1 else torch.tensor([[0, 1], [0, 1]], dtype=torch.long, device=device).t()\n",
+        "            graph = Data(x=node_features, edge_index=edge_index)\n",
+        "            graphs.append(graph)\n",
+        "        return Batch.from_data_list(graphs)\n",
+        "\n",
+        "    def forward(self, audio_features, text_input_ids, text_attention_mask, spectrograms):\n",
+        "        bert_outputs = self.bert(input_ids=text_input_ids, attention_mask=text_attention_mask)\n",
+        "        text_features = bert_outputs.last_hidden_state.mean(dim=1)\n",
+        "        graph_batch = self.create_semantic_graph(text_features, audio_features)\n",
+        "        graph_out = self.graph_attention(graph_batch.x, graph_batch.edge_index, graph_batch.batch)\n",
+        "        vit_out = self.vision_transformer(spectrograms)\n",
+        "        audio_1d = audio_features.unsqueeze(1)\n",
+        "        unet_out = self.unet(audio_1d)\n",
+        "        alexnet_out = self.alexnet(audio_features)\n",
+        "        fused_features = torch.cat([graph_out, vit_out, unet_out, alexnet_out], dim=1)\n",
+        "        fused_features = self.fusion_layer(fused_features)\n",
+        "        output = self.classifier(fused_features)\n",
+        "        return output"
+      ],
+      "metadata": {
+        "id": "vr5KhBeI12t5"
       },
       "execution_count": null,
       "outputs": []
