added extended class

--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV3UfPSuiX8uPeG7SDXKlv",
+      "authorship_tag": "ABX9TyNn12rL5NwCCJ9BFMnGnQiv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -644,7 +644,99 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class ADReSSoAnalyzerExtended(ADReSSoAnalyzer):\n",
+        "    def __init__(self, base_path=\"/content/drive/MyDrive/Voice/extracted/ADReSSo21\"):\n",
+        "        super().__init__(base_path)\n",
+        "        self.model = None\n",
+        "        self.trainer = None\n",
+        "        self.scaler = StandardScaler()\n",
+        "\n",
+        "    def train_individual_model(self, model, train_loader, val_loader, model_name, num_epochs=5):\n",
+        "        trainer = ADReSSoTrainer(model)\n",
+        "        trainer.train(train_loader, val_loader, num_epochs=num_epochs)\n",
+        "        torch.save(model.state_dict(), os.path.join(self.output_path, 'models', f'{model_name}.pth'))\n",
+        "        print(f\"Saved {model_name} to {os.path.join(self.output_path, 'models', f'{model_name}.pth')}\")\n",
+        "        return trainer\n",
+        "\n",
+        "    def step_6_define_model_architecture(self):\n",
+        "        print(\"\\n\" + \"=\"*60)\n",
+        "        print(\"STEP 6: DEFINING MODEL ARCHITECTURE\")\n",
+        "        print(\"=\"*60)\n",
+        "        self.model = MultiModalADReSSoModel(audio_feature_dim=768, text_feature_dim=768, spectrogram_height=80, num_classes=2)\n",
+        "        self.trainer = ADReSSoTrainer(self.model)\n",
+        "        print(f\"Model initialized with {sum(p.numel() for p in self.model.parameters()):,} parameters\")\n",
+        "        return self.model\n",
+        "\n",
+        "    def step_7_train_model(self, features_dict, linguistic_features, batch_size=4, num_epochs=5):\n",
+        "        print(\"\\n\" + \"=\"*60)\n",
+        "        print(\"STEP 7: TRAINING MODEL\")\n",
+        "        print(\"=\"*60)\n",
+        "        if self.model is None:\n",
+        "            self.step_6_define_model_architecture()\n",
+        "        labels = {fid: 1 if 'diagnosis_ad' in fid or 'progression_decline' in fid else 0 for fid in features_dict.keys()}\n",
+        "        file_ids = list(features_dict.keys())\n",
+        "        train_ids, test_ids = train_test_split(file_ids, test_size=0.2, stratify=[labels[f] for f in file_ids], random_state=42)\n",
+        "        train_ids, val_ids = train_test_split(train_ids, test_size=0.2, stratify=[labels[f] for f in train_ids], random_state=42)\n",
+        "        train_features = {fid: features_dict[fid] for fid in train_ids}\n",
+        "        val_features = {fid: features_dict[fid] for fid in val_ids}\n",
+        "        test_features = {fid: features_dict[fid] for fid in test_ids}\n",
+        "        train_linguistic = {fid: linguistic_features[fid] for fid in train_ids}\n",
+        "        val_linguistic = {fid: linguistic_features[fid] for fid in val_ids}\n",
+        "        test_linguistic = {fid: linguistic_features[fid] for fid in test_ids}\n",
+        "        train_labels = {fid: labels[fid] for fid in train_ids}\n",
+        "        val_labels = {fid: labels[fid] for fid in val_ids}\n",
+        "        test_labels = {fid: labels[fid] for fid in test_ids}\n",
+        "        train_dataset = ADReSSoDataset(train_features, train_linguistic, train_labels)\n",
+        "        val_dataset = ADReSSoDataset(val_features, val_linguistic, val_labels)\n",
+        "        test_dataset = ADReSSoDataset(test_features, test_linguistic, test_labels)\n",
+        "        train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "        val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+        "        test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "        print(\"Training individual models...\")\n",
+        "        self.train_individual_model(self.model.graph_attention, train_loader, val_loader, 'graph_attention')\n",
+        "        self.train_individual_model(self.model.vision_transformer, train_loader, val_loader, 'vision_transformer')\n",
+        "        self.train_individual_model(self.model.unet, train_loader, val_loader, 'unet')\n",
+        "        self.train_individual_model(self.model.alexnet, train_loader, val_loader, 'alexnet')\n",
+        "\n",
+        "        print(\"\\nTraining fused model...\")\n",
+        "        self.trainer.train(train_loader, val_loader, num_epochs=num_epochs)\n",
+        "        self.test_loader = test_loader\n",
+        "        return self.trainer\n",
+        "\n",
+        "    def step_8_evaluate_model(self, visualize_graphs=True, num_graph_samples=5):\n",
+        "        print(\"\\n\" + \"=\"*60)\n",
+        "        print(\"STEP 8: MODEL EVALUATION AND SEMANTIC ANALYSIS\")\n",
+        "        print(\"=\"*60)\n",
+        "        try:\n",
+        "            self.model.load_state_dict(torch.load(os.path.join(self.output_path, 'models', 'best_adresso_model.pth')))\n",
+        "            evaluation_results = self.trainer.evaluate_detailed(self.test_loader, class_names=['CN', 'AD'])\n",
+        "            if visualize_graphs:\n",
+        "                print(f\"\\nVisualizing semantic relationships for {num_graph_samples} samples...\")\n",
+        "                self.trainer.visualize_semantic_relationships(self.test_loader, num_samples=num_graph_samples)\n",
+        "            self.trainer.analyze_feature_importance()\n",
+        "            self.generate_evaluation_report(evaluation_results)\n",
+        "            return evaluation_results\n",
+        "        except Exception as e:\n",
+        "            log_error(f\"Error in model evaluation: {str(e)}\")\n",
+        "            return None\n",
+        "\n",
+        "    def generate_evaluation_report(self, evaluation_results):\n",
+        "        report = f\"\"\"\n",
+        "=== EVALUATION REPORT ===\n",
+        "Accuracy: {evaluation_results['accuracy']:.4f}\n",
+        "Precision: {evaluation_results['precision']:.4f}\n",
+        "Recall: {evaluation_results['recall']:.4f}\n",
+        "F1-Score: {evaluation_results['f1']:.4f}\n",
+        "ROC AUC: {evaluation_results['auc']:.4f if evaluation_results['auc'] is not None else 'N/A'}\n",
+        "Confusion Matrix:\n",
+        "{evaluation_results['confusion_matrix']}\n",
+        "\"\"\"\n",
+        "        with open(os.path.join(self.output_path, 'evaluation_report.txt'), 'w') as f:\n",
+        "            f.write(report)\n",
+        "        print(report)"
+      ],
       "metadata": {
         "id": "0E7fu3t_2JlW"
       },
