added Cell 7: Run the Pipeline

--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPM8aWfKf6qpb26NOmloFms",
+      "authorship_tag": "ABX9TyMGjxTcsZfCrxOyLo7j8LoQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -748,6 +748,61 @@
       ],
       "metadata": {
         "id": "0E7fu3t_2JlW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "analyzer = ADReSSoAnalyzerExtended()\n",
+        "print(\"=== ADReSSo21 Speech Analysis Pipeline ===\\n\")\n",
+        "audio_files = analyzer.get_audio_files()\n",
+        "total_files = sum(len(files) for files in audio_files.values())\n",
+        "print(f\"Found {total_files} audio files across all categories\")\n",
+        "for category, files in audio_files.items():\n",
+        "    print(f\"  {category}: {len(files)} files\")\n",
+        "\n",
+        "if total_files == 0:\n",
+        "    log_error(\"No audio files found. Please check the dataset path.\")\n",
+        "else:\n",
+        "    print(\"\\nStep 1: Extracting acoustic features...\")\n",
+        "    features_dict = analyzer.extract_acoustic_features(audio_files, sample_fraction=0.5, extract_wav2vec=False)\n",
+        "\n",
+        "    print(\"\\nStep 2: Visualizing acoustic features for a sample...\")\n",
+        "    for category, files in audio_files.items():\n",
+        "        if files:\n",
+        "            file_id = f\"{category}_{os.path.basename(files[0])}\"\n",
+        "            analyzer.visualize_features(features_dict[file_id], file_id)\n",
+        "            break\n",
+        "\n",
+        "    print(\"\\nStep 3: Extracting transcripts...\")\n",
+        "    transcripts = analyzer.extract_transcripts(audio_files)\n",
+        "\n",
+        "    print(\"\\nStep 4: Saving transcripts...\")\n",
+        "    analyzer.save_transcripts(transcripts)\n",
+        "\n",
+        "    print(\"\\nStep 5: Creating transcript table...\")\n",
+        "    transcript_df = analyzer.create_transcript_table(transcripts)\n",
+        "    print(\"Transcript Summary Table:\")\n",
+        "    print(transcript_df.to_string(index=False))\n",
+        "\n",
+        "    print(\"\\nStep 6: Extracting linguistic features...\")\n",
+        "    linguistic_features = analyzer.extract_linguistic_features(transcripts)\n",
+        "\n",
+        "    print(\"\\nStep 7: Performing EDA...\")\n",
+        "    analyzer.perform_eda(features_dict, linguistic_features)\n",
+        "\n",
+        "    print(\"\\nStep 8: Defining and training model...\")\n",
+        "    trainer = analyzer.step_7_train_model(features_dict, linguistic_features, batch_size=4, num_epochs=5)\n",
+        "\n",
+        "    print(\"\\nStep 9: Evaluating model...\")\n",
+        "    evaluation_results = analyzer.step_8_evaluate_model(visualize_graphs=True, num_graph_samples=5)\n",
+        "\n",
+        "    print(\"\\nPipeline completed successfully!\")"
+      ],
+      "metadata": {
+        "id": "YpB1LGJU3pkm"
       },
       "execution_count": null,
       "outputs": []
