--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -44,20 +44,32 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "5nT2A8hr5bSJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5nT2A8hr5bSJ",
+        "outputId": "90eab46b-c2f6-4b30-e14d-082c5a8e7484"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "1fwYEXVvv7FS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2aa0ea00-2b08-4abd-fbd2-5391daf00078"
+        "outputId": "bec47647-931a-4fe5-a898-d89aab19e8d0"
       },
       "outputs": [
         {
@@ -65,8 +77,7 @@
           "name": "stdout",
           "text": [
             "Created output directories at /content/drive/MyDrive/Final_output\n",
-            "All required packages installed successfully\n",
-            "Error mounting Google Drive: Mountpoint must not already contain files\n"
+            "All required packages installed successfully\n"
           ]
         }
       ],
