--- a/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
+++ b/Graph_Attention_and_Feature_Fusion_for_Robust_Alzheimer’s_Disease_Diagnosis_from_the_ADReSSo21_Speech_Dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNQRZH4dpFtJ/4q1gBsgK6r",
+      "authorship_tag": "ABX9TyPSEmip2odQEOSdWrb209Nv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -993,6 +993,69 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CL"
+      ],
+      "metadata": {
+        "id": "LzkYH3JVEGbk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cell 1: Imports and Initial Setup\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "import soundfile as sf\n",
+        "from pathlib import Path\n",
+        "import pickle\n",
+        "import json\n",
+        "from typing import Dict, List, Tuple, Any, Optional\n",
+        "import warnings\n",
+        "import time\n",
+        "from datetime import datetime\n",
+        "import logging\n",
+        "\n",
+        "# Deep learning imports\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "import torch_geometric\n",
+        "from torch_geometric.nn import GCNConv, GATConv, global_mean_pool\n",
+        "from torch_geometric.data import Data, Batch\n",
+        "\n",
+        "# ML and visualization imports\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, roc_auc_score, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import networkx as nx\n",
+        "\n",
+        "# Suppress warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Configure logging\n",
+        "logging.basicConfig(level=logging.INFO)\n",
+        "logger = logging.getLogger(__name__)\n",
+        "\n",
+        "print(\"All imports completed successfully!\")\n",
+        "print(f\"Using PyTorch version: {torch.__version__}\")\n",
+        "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
+        "if torch.cuda.is_available():\n",
+        "    print(f\"CUDA device: {torch.cuda.get_device_name(0)}\")"
+      ],
+      "metadata": {
+        "id": "KoGxFxGNEHda"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
