--- a/Jul16_Speech.ipynb
+++ b/Jul16_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMvl6fu5qhWddXpsURkF76y",
+      "authorship_tag": "ABX9TyMFwiqhYXQUpjGdE1QRCJSJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,6 +287,29 @@
         "# Install required packages\n",
         "!pip install librosa soundfile opensmile speechbrain transformers torch openai-whisper\n",
         "!pip install torch-geometric"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GKvAYFRBnkax",
+        "outputId": "cf2014fb-b648-469b-8687-bc692b2b5996"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
       ]
     }
   ]
