see files at drive

--- a/Jul16_Speech.ipynb
+++ b/Jul16_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMFwiqhYXQUpjGdE1QRCJSJ",
+      "authorship_tag": "ABX9TyOzt2/oMlFwoGhlB5vDP5Ag",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -308,6 +308,32 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -la /content/drive/MyDrive/Voice/extracted/ADReSSo21"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KFeCB8gzn4xM",
+        "outputId": "53238bbb-4479-48c1-9cd7-d3fccb308015"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 12\n",
+            "drwx------ 2 root root 4096 Jun  7 05:38 checkpoints\n",
+            "drwx------ 2 root root 4096 May 31 04:40 diagnosis\n",
+            "drwx------ 2 root root 4096 May 31 04:39 progression\n"
           ]
         }
       ]
