--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPigWWkb/7U+jDKsvoF75Yk",
+      "authorship_tag": "ABX9TyPuWAaWUvc1r+a5FIIGfnQM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ui3BTqE552QH",
-        "outputId": "1d47be2f-187c-444b-92bd-506bbc163b4b"
+        "outputId": "30f217a2-78e6-4f8e-e9a2-27f2b976706d"
       },
       "outputs": [
         {
@@ -51,8 +51,7 @@
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
             "Requirement already satisfied: transformers in /usr/local/lib/python3.11/dist-packages (4.53.1)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.11/dist-packages (2.6.0+cu124)\n",
-            "Collecting speechbrain\n",
-            "  Downloading speechbrain-1.0.3-py3-none-any.whl.metadata (24 kB)\n",
+            "Requirement already satisfied: speechbrain in /usr/local/lib/python3.11/dist-packages (1.0.3)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (3.5)\n",
             "Requirement already satisfied: audioread>=2.1.9 in /usr/local/lib/python3.11/dist-packages (from librosa) (3.0.1)\n",
             "Requirement already satisfied: numba>=0.51.0 in /usr/local/lib/python3.11/dist-packages (from librosa) (0.60.0)\n",
@@ -85,34 +84,23 @@
             "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.11/dist-packages (from transformers) (4.67.1)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch) (3.1.6)\n",
             "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch) (2025.3.2)\n",
-            "Collecting nvidia-cuda-nvrtc-cu12==12.4.127 (from torch)\n",
-            "  Downloading nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-            "Collecting nvidia-cuda-runtime-cu12==12.4.127 (from torch)\n",
-            "  Downloading nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-            "Collecting nvidia-cuda-cupti-cu12==12.4.127 (from torch)\n",
-            "  Downloading nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
-            "Collecting nvidia-cudnn-cu12==9.1.0.70 (from torch)\n",
-            "  Downloading nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
-            "Collecting nvidia-cublas-cu12==12.4.5.8 (from torch)\n",
-            "  Downloading nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-            "Collecting nvidia-cufft-cu12==11.2.1.3 (from torch)\n",
-            "  Downloading nvidia_cufft_cu12-11.2.1.3-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-            "Collecting nvidia-curand-cu12==10.3.5.147 (from torch)\n",
-            "  Downloading nvidia_curand_cu12-10.3.5.147-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-            "Collecting nvidia-cusolver-cu12==11.6.1.9 (from torch)\n",
-            "  Downloading nvidia_cusolver_cu12-11.6.1.9-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
-            "Collecting nvidia-cusparse-cu12==12.3.1.170 (from torch)\n",
-            "  Downloading nvidia_cusparse_cu12-12.3.1.170-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
+            "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
+            "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
+            "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
+            "Requirement already satisfied: nvidia-cudnn-cu12==9.1.0.70 in /usr/local/lib/python3.11/dist-packages (from torch) (9.1.0.70)\n",
+            "Requirement already satisfied: nvidia-cublas-cu12==12.4.5.8 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.5.8)\n",
+            "Requirement already satisfied: nvidia-cufft-cu12==11.2.1.3 in /usr/local/lib/python3.11/dist-packages (from torch) (11.2.1.3)\n",
+            "Requirement already satisfied: nvidia-curand-cu12==10.3.5.147 in /usr/local/lib/python3.11/dist-packages (from torch) (10.3.5.147)\n",
+            "Requirement already satisfied: nvidia-cusolver-cu12==11.6.1.9 in /usr/local/lib/python3.11/dist-packages (from torch) (11.6.1.9)\n",
+            "Requirement already satisfied: nvidia-cusparse-cu12==12.3.1.170 in /usr/local/lib/python3.11/dist-packages (from torch) (12.3.1.170)\n",
             "Requirement already satisfied: nvidia-cusparselt-cu12==0.6.2 in /usr/local/lib/python3.11/dist-packages (from torch) (0.6.2)\n",
             "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /usr/local/lib/python3.11/dist-packages (from torch) (2.21.5)\n",
             "Requirement already satisfied: nvidia-nvtx-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
-            "Collecting nvidia-nvjitlink-cu12==12.4.127 (from torch)\n",
-            "  Downloading nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+            "Requirement already satisfied: nvidia-nvjitlink-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch) (12.4.127)\n",
             "Requirement already satisfied: triton==3.2.0 in /usr/local/lib/python3.11/dist-packages (from torch) (3.2.0)\n",
             "Requirement already satisfied: sympy==1.13.1 in /usr/local/lib/python3.11/dist-packages (from torch) (1.13.1)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from sympy==1.13.1->torch) (1.3.0)\n",
-            "Collecting hyperpyyaml (from speechbrain)\n",
-            "  Downloading HyperPyYAML-1.2.2-py3-none-any.whl.metadata (7.6 kB)\n",
+            "Requirement already satisfied: hyperpyyaml in /usr/local/lib/python3.11/dist-packages (from speechbrain) (1.2.2)\n",
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.11/dist-packages (from speechbrain) (0.2.0)\n",
             "Requirement already satisfied: torchaudio in /usr/local/lib/python3.11/dist-packages (from speechbrain) (2.6.0+cu124)\n",
             "Requirement already satisfied: hf-xet<2.0.0,>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (1.1.5)\n",
@@ -125,22 +113,10 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (2025.7.9)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.1.0->librosa) (3.6.0)\n",
             "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.11/dist-packages (from soundfile>=0.12.1->librosa) (1.17.1)\n",
-            "Collecting ruamel.yaml>=0.17.28 (from hyperpyyaml->speechbrain)\n",
-            "  Downloading ruamel.yaml-0.18.14-py3-none-any.whl.metadata (24 kB)\n",
+            "Requirement already satisfied: ruamel.yaml>=0.17.28 in /usr/local/lib/python3.11/dist-packages (from hyperpyyaml->speechbrain) (0.18.14)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch) (3.0.2)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.0->soundfile>=0.12.1->librosa) (2.22)\n",
-            "Collecting ruamel.yaml.clib>=0.2.7 (from ruamel.yaml>=0.17.28->hyperpyyaml->speechbrain)\n",
-            "  Downloading ruamel.yaml.clib-0.2.12-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.7 kB)\n",
-            "Downloading nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl (363.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (13.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m119.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (24.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m85.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (883 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m52.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl (664.8 MB)\n",
-            "\u001b[2K   \u001b[91m━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.0/664.8 MB\u001b[0m \u001b[31m134.2 MB/s\u001b[0m eta \u001b[36m0:00:05\u001b[0m"
+            "Requirement already satisfied: ruamel.yaml.clib>=0.2.7 in /usr/local/lib/python3.11/dist-packages (from ruamel.yaml>=0.17.28->hyperpyyaml->speechbrain) (0.2.12)\n"
           ]
         }
       ],
@@ -164,6 +140,10 @@
         "    'test': '/content/drive/MyDrive/Voice/extracted/ADReSSo21/progression/test-dist/segmentation/*.csv'\n",
         "}\n",
         "\n",
+        "# Create output directory if it doesn't exist\n",
+        "output_dir = '/content/drive/MyDrive/Voice/extracted/ADReSSo21'\n",
+        "os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
         "# Organize dataset\n",
         "metadata = []\n",
         "for dataset, path in audio_paths.items():\n",
@@ -180,8 +160,123 @@
         "\n",
         "# Create metadata DataFrame\n",
         "metadata_df = pd.DataFrame(metadata)\n",
-        "metadata_df.to_csv('/content/drive/MyDrive/Voice/extracted/ADReSSo21/metadata.csv', index=False)"
+        "metadata_df.to_csv(os.path.join(output_dir, 'metadata.csv'), index=False)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import librosa\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "from scipy.fft import fft\n",
+        "from scipy.signal import stft\n",
+        "from librosa.feature import spectral_centroid, spectral_rolloff, spectral_bandwidth\n",
+        "\n",
+        "# Load metadata\n",
+        "metadata_df = pd.read_csv('/content/drive/MyDrive/Voice/extracted/ADReSSo21/metadata.csv')\n",
+        "\n",
+        "# Time-Domain Analysis\n",
+        "def time_domain_analysis(audio_path):\n",
+        "    y, sr = librosa.load(audio_path)\n",
+        "    # Waveform plot\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    librosa.display.waveshow(y, sr=sr)\n",
+        "    plt.title(f'Waveform: {os.path.basename(audio_path)}')\n",
+        "    plt.savefig(f'/content/drive/MyDrive/Voice/extracted/ADReSSo21/visualizations/waveform_{os.path.basename(audio_path)}.png')\n",
+        "    plt.close()\n",
+        "    # Amplitude stats\n",
+        "    stats = {\n",
+        "        'mean': np.mean(np.abs(y)),\n",
+        "        'median': np.median(np.abs(y)),\n",
+        "        'std': np.std(y),\n",
+        "        'min': np.min(y),\n",
+        "        'max': np.max(y),\n",
+        "        'rms': np.sqrt(np.mean(y**2))\n",
+        "    }\n",
+        "    # Zero-crossing rate\n",
+        "    zcr = librosa.feature.zero_crossing_rate(y)[0].mean()\n",
+        "    # Duration\n",
+        "    duration = librosa.get_duration(y=y, sr=sr)\n",
+        "    return stats, zcr, duration\n",
+        "\n",
+        "# Frequency-Domain Analysis\n",
+        "def frequency_domain_analysis(audio_path):\n",
+        "    y, sr = librosa.load(audio_path)\n",
+        "    # FFT\n",
+        "    fft_out = fft(y)\n",
+        "    freqs = np.fft.fftfreq(len(fft_out), 1/sr)\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    plt.plot(freqs[:len(freqs)//2], np.abs(fft_out)[:len(freqs)//2])\n",
+        "    plt.title(f'FFT: {os.path.basename(audio_path)}')\n",
+        "    plt.savefig(f'/content/drive/MyDrive/Voice/extracted/ADReSSo21/visualizations/fft_{os.path.basename(audio_path)}.png')\n",
+        "    plt.close()\n",
+        "    # Spectral stats\n",
+        "    centroid = spectral_centroid(y=y, sr=sr)[0].mean()\n",
+        "    spread = spectral_bandwidth(y=y, sr=sr)[0].mean()\n",
+        "    rolloff = spectral_rolloff(y=y, sr=sr)[0].mean()\n",
+        "    return {'centroid': centroid, 'spread': spread, 'rolloff': rolloff}\n",
+        "\n",
+        "# Time-Frequency Analysis\n",
+        "def time_frequency_analysis(audio_path):\n",
+        "    y, sr = librosa.load(audio_path)\n",
+        "    # Spectrogram\n",
+        "    D = np.abs(stft(y)[2])\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    librosa.display.specshow(librosa.amplitude_to_db(D, ref=np.max), sr=sr, x_axis='time', y_axis='hz')\n",
+        "    plt.colorbar(format='%+2.0f dB')\n",
+        "    plt.title(f'Spectrogram: {os.path.basename(audio_path)}')\n",
+        "    plt.savefig(f'/content/drive/MyDrive/Voice/extracted/ADReSSo21/visualizations/spectrogram_{os.path.basename(audio_path)}.png')\n",
+        "    plt.close()\n",
+        "    # Mel-spectrogram\n",
+        "    mel = librosa.feature.melspectrogram(y=y, sr=sr)\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    librosa.display.specshow(librosa.power_to_db(mel, ref=np.max), sr=sr, x_axis='time', y_axis='mel')\n",
+        "    plt.colorbar(format='%+2.0f dB')\n",
+        "    plt.title(f'Mel-Spectrogram: {os.path.basename(audio_path)}')\n",
+        "    plt.savefig(f'/content/drive/MyDrive/Voice/extracted/ADReSSo21/visualizations/mel_{os.path.basename(audio_path)}.png')\n",
+        "    plt.close()\n",
+        "\n",
+        "# Statistical Analysis\n",
+        "def statistical_analysis(audio_path):\n",
+        "    y, sr = librosa.load(audio_path)\n",
+        "    mfccs = librosa.feature.mfcc(y=y, sr=sr, n_mfcc=13)\n",
+        "    delta = librosa.feature.delta(mfccs)\n",
+        "    delta_delta = librosa.feature.delta(mfccs, order=2)\n",
+        "    energy = librosa.feature.rms(y=y)[0].mean()\n",
+        "    log_energy = np.log(energy + 1e-10)\n",
+        "    return mfccs.mean(axis=1), delta.mean(axis=1), delta_delta.mean(axis=1), energy, log_energy\n",
+        "\n",
+        "# Dataset-Level Analysis\n",
+        "def dataset_analysis(metadata_df):\n",
+        "    # Class distribution\n",
+        "    sns.countplot(data=metadata_df, x='label')\n",
+        "    plt.savefig('/content/drive/MyDrive/Voice/extracted/ADReSSo21/visualizations/class_distribution.png')\n",
+        "    plt.close()\n",
+        "    # Sample rate and channel consistency\n",
+        "    sample_rates = []\n",
+        "    channels = []\n",
+        "    for audio_path in metadata_df['audio_path']:\n",
+        "        y, sr = librosa.load(audio_path, mono=False)\n",
+        "        sample_rates.append(sr)\n",
+        "        channels.append(y.shape[0] if y.ndim > 1 else 1)\n",
+        "    print(f'Sample rates: {set(sample_rates)}')\n",
+        "    print(f'Channels: {set(channels)}')\n",
+        "\n",
+        "# Run analysis for sample files\n",
+        "for _, row in metadata_df.sample(5).iterrows():\n",
+        "    time_domain_analysis(row['audio_path'])\n",
+        "    frequency_domain_analysis(row['audio_path'])\n",
+        "    time_frequency_analysis(row['audio_path'])\n",
+        "dataset_analysis(metadata_df)"
+      ],
+      "metadata": {
+        "id": "sbtgm08w7ZOc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
