added step 1 succesfully

--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -198,10 +198,57 @@
         "print(metadata_df[metadata_df['split'] == 'train']['label'].value_counts())"
       ],
       "metadata": {
-        "id": "a0qFWZPLedmv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a0qFWZPLedmv",
+        "outputId": "c840458e-4207-4093-f54a-c446deda684a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement whisper-jax (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for whisper-jax\u001b[0m\u001b[31m\n",
+            "\u001b[0mInitial memory usage: 578.61 MB\n",
+            "Dataset Summary:\n",
+            "Train AD audio files: 87\n",
+            "Train CN audio files: 79\n",
+            "Train AD segmentation files: 87\n",
+            "Train CN segmentation files: 79\n",
+            "Test audio files: 32\n",
+            "Test segmentation files: 15\n",
+            "\n",
+            "Metadata DataFrame created with 198 entries\n",
+            "Memory usage after setup: 579.02 MB\n",
+            "Setup completed successfully!\n",
+            "\n",
+            "Metadata sample:\n",
+            "    file_id                                         audio_path  \\\n",
+            "0  adrso047  /content/drive/MyDrive/Voice/extracted/ADReSSo...   \n",
+            "1  adrso128  /content/drive/MyDrive/Voice/extracted/ADReSSo...   \n",
+            "2  adrso110  /content/drive/MyDrive/Voice/extracted/ADReSSo...   \n",
+            "3  adrso036  /content/drive/MyDrive/Voice/extracted/ADReSSo...   \n",
+            "4  adrso045  /content/drive/MyDrive/Voice/extracted/ADReSSo...   \n",
+            "\n",
+            "                                            seg_path label  split  \n",
+            "0  /content/drive/MyDrive/Voice/extracted/ADReSSo...    ad  train  \n",
+            "1  /content/drive/MyDrive/Voice/extracted/ADReSSo...    ad  train  \n",
+            "2  /content/drive/MyDrive/Voice/extracted/ADReSSo...    ad  train  \n",
+            "3  /content/drive/MyDrive/Voice/extracted/ADReSSo...    ad  train  \n",
+            "4  /content/drive/MyDrive/Voice/extracted/ADReSSo...    ad  train  \n",
+            "\n",
+            "Class distribution in training set:\n",
+            "label\n",
+            "ad    87\n",
+            "cn    79\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     }
   ]
 }
